refactored to use github group id

--- a/mercurydb/src/main/resources/template.java.mustache
+++ b/mercurydb/src/main/resources/template.java.mustache
@@ -1,6 +1,6 @@
 package {{packageName}};
 
-import org.mercurydb.queryutils.*;
+import com.github.mercurydb.queryutils.*;
 import java.util.*;
 
 import {{fullSourceClass}};
